--- a/projetos/proj001/index.html
+++ b/projetos/proj001/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sua Lista de Tarefas</title>
+    <link rel="shortcut icon" href="fivicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Criar</li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+    </nav>
+    <div id="conteiner">
+        <div id="conteudo">
+            <header>
+            </header>
+            <main>
+                <section>
+
+                </section>
+                <section>
+
+                </section>
+            </main>
+        </div>
+    </div>
+    <footer>
+        <p>Site desenvolvido por Bruno e por Davi.</p>
+    </footer>
 </body>
 </html>
